update swagger docs 4
