# docs/swagger.json
@@ -313,54 +313,6 @@
                         }
                     }
                 }
-            },
-            "patch": {
-                "security": [
-                    {
-                        "BearerToken": []
-                    }
-                ],
-                "description": "Update a category by admin",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Category"
-                ],
-                "summary": "Update a category by admin",
-                "parameters": [
-                    {
-                        "description": "the body to update a category",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/config.CategoryInput"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Category id in UUID format",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Admin Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/config.CategoryOutput"
-                        }
-                    }
-                }
             }
         },
         "/category/": {
@@ -406,7 +358,7 @@
                 }
             }
         },
-        "/category/:id": {
+        "/category/{id}": {
             "delete": {
                 "security": [
                     {
@@ -422,6 +374,54 @@
                 ],
                 "summary": "Delete a category by admin",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Category id in UUID format",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Admin Authorization. How to input in swagger : 'Bearer \u003cinsert_your_token_here\u003e'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/config.CategoryOutput"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "Update a category by admin",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Update a category by admin",
+                "parameters": [
+                    {
+                        "description": "the body to update a category",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/config.CategoryInput"
+                        }
+                    },
                     {
                         "type": "string",
                         "description": "Category id in UUID format",
@@ -603,7 +603,7 @@
                 }
             }
         },
-        "/product/:id": {
+        "/product/{id}": {
             "delete": {
                 "security": [
                     {
